--- a/cuk/index.html
+++ b/cuk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <title>고려사이버대학교 입학지원센터</title>
+        <title>1고려사이버대학교 입학지원센터</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
