safari css color, button size, input radius

--- a/cuk/index.html
+++ b/cuk/index.html
@@ -1932,7 +1932,11 @@
                                             ></span>
                                         </div>
                                         <div class="title">
-                                            <p></p>
+                                            <p>
+                                                강봉윤 전 대한약사회 정책위원장
+                                                융합정보 관련 석사
+                                                학위취득-융합정보대학원
+                                            </p>
                                         </div>
                                     </a>
                                 </div>
