--- a/cuk/index.html
+++ b/cuk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
-        <title>1고려사이버대학교 입학지원센터</title>
+        <title>고려사이버대학교 입학지원센터</title>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -864,7 +864,7 @@
                 <div class="announcement">
                     <span>지원서작성 D-6</span>
                     <div class="content">
-                        <strong>입학지원안내</strong>
+                        <strong>1입학지원안내</strong>
                         <p>
                             나에게 맞는 전형과 장학을 확인하고<br />입학지원서를
                             작성하세요.
