--- a/cuk/sub/transfer/t_military_inq.html
+++ b/cuk/sub/transfer/t_military_inq.html
@@ -1830,7 +1830,7 @@
             </div>
         </div>
         <div class="pop-wrapper institute-search">
-            <div class="tb-cell">
+            <div class="pop-dim">
                 <div class="pop-container">
                     <div class="pop-header">
                         <h6>협약기관 검색</h6>
